# Transformers

./: .gitignore  README.md  pyproject.toml
src/: ArgParser.py  create_dataset.py  direct_translate.py  model_analysis.py  train.py  train_fixed.py  train_revised.py
src/model/: Decoder.py  DecoderLayer.py  Encoder.py  EncoderLayer.py  MultiHeadAttention.py  Residual.py  SelfAttention.py  Transformer.py
src/utils/: Helper.py
